2025-08-09  Zhengyi Fu  <i@fuzy.me>

	Improve foot support of tui.el

	* site-lisp/tui/tui.el (tui-foot-file, tui-foot-appid)
	(tui-foot-window-size): New user options.
	(tui-foot-exec): New function.

2025-08-09  Zhengyi Fu  <i@fuzy.me>

	* init.el (+straight-review-updated-repos): New command.

2025-08-08  Zhengyi Fu  <i@fuzy.me>

	* init.el (claude-code-ide-cli-path): Set to scripts/claude.

2025-08-08  Zhengyi Fu  <i@fuzy.me>

	* packages.el: Remove elfeed-web.

2025-08-08  Zhengyi Fu  <i@fuzy.me>

	* init.el (+dired-side): New command.

2025-08-08  Zhengyi Fu  <i@fuzy.me>

	* scripts/claude: New file.

2025-08-08  Zhengyi Fu  <i@fuzy.me>

	Remove escape key bindings from meow and set claude-code-ide backend

	* init.el: Remove escape key bindings from meow-normal-define-key and
	meow-motion-define-key.
	* init.el: Set claude-code-ide-terminal-backend to 'eat'.

2025-08-08  Zhengyi Fu  <i@fuzy.me>

	Add comprehensive side window management

	* init.el (+toggle-side-window): New function.  Generic function to
	toggle side windows with proper size restoration using window state
	persistence.
	(+toggle-side-window-left, +toggle-side-window-right,
	+toggle-side-window-above, +toggle-side-window-below): New commands.
	Specialized commands for toggling side windows on each side of the frame.
	(window-prefix-map): Update key bindings for side window toggles.
	(toggle-left-side-window): Remove function.  Replaced by new side window
	management system.

2025-08-08  Zhengyi Fu  <i@fuzy.me>

	* init.el: Add more key bindings for windows-x.el.

2025-08-08  Zhengyi Fu  <i@fuzy.me>

	* packages.el: Add claude-code-ide.el.

2025-08-08  Zhengyi Fu  <i@fuzy.me>

	* init.el: Do not start server automatically.

2025-08-07  Zhengyi Fu  <i@fuzy.me>

	Add OSC 8 support to comint

	* init.el (+handle-osc-8, +comint-handle-osc-8): New functions.

2025-08-07  Zhengyi Fu  <i@fuzy.me>

	* init.el (+custom-faces): Add some color to tab-line in dark
	mode.
